# almalex

./: .ignore  .tmux-session  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  deploy.sh
backend/: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  REFACTORING.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0edd0b49792d_alter_chat_title.py  0ff29808da67_decision_model_and_rename_chunk.py  1e827f6444ee_drop_chat_title_column.py  1f9a46e4d45e_add_source_url_to_decision.py  262ff3004f7c_make_embedding_nullable.py  26d425877d55_create_act_table.py  30a276fa6f7a_add_act_article_tables.py  342fe082d552_remove_user_id_from_chat.py  3ff444d68d2a_add_status_field_to_chat_table.py  40f485b8a6d7_add_source_url_to_act.py  41cecc98dd61_remove_chat_storage.py  4c21178e7771_add_date_to_decision_table_unique_.py  58037f5903ec_infomaniak_embedding_and_context.py  5914108014f1_add_hnsw_index_on_chunk_embedding.py  5de3e38b7091_remove_document_is_active_and_update_at.py  6295567676a8_add_updated_at_to_document.py  739a27e18012_drop_chat_table.py  74487ab86eeb_drop_chat_status_column.py  759fbce59200_add_active_flag_to_chunk.py  7daaf3f9442f_rename_tsv_column_add_context.py  98db31e1cc9f_add_document_is_active.py  9d7e73fef937_initial.py  9f0d4ce7ed40_init.py  a1b2c3d4e5f6_add_embedded_text_to_article_chunk.py  a97f60940a71_add_breadcrumb_to_articles.py  (+16 more)
backend/app/: conf.py  crud.py  limiter.py  main.py  redis.py  utils.py
backend/cli/: main.py
backend/mcp_server/: main.py
backend/tests/: test_chat.py
(+298 files in other folders)
