[project]
name = "almalex-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
