[project]
name = "almalex-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "cohere>=5.13,<6.0",
    "fastapi[standard]>=0.115.12",
    "lxml>=5.3.0",
    "nanoid>=2.0.0",
    "openai>=2.0,<3.0",
    "pgvector>=0.4.0",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.0",
    "pyjwt>=2.10.1",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "sentry-sdk[fastapi]>=2.32.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "ipython>=9.2.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[tool.ruff.lint]
extend-select = ["I"]
